# llm-reliability-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: evals.py  prompts.py
backend/app/api/schemas/: evals.py  prompts.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/eval/: loader.py  runner.py  types.py  validators.py
backend/app/llm/: provider.py  schemas.py
backend/app/llm/providers/: fake.py
backend/app/tests/: conftest.py  test_api_evals.py  test_api_prompts.py  test_db_models.py  test_eval_runner_smoke.py  test_eval_validators.py  test_fake_provider.py  test_health.py
datasets/: README.md
datasets/cicd/golden/: case_001_expected.json  case_002_expected.json  case_003_expected.json
datasets/cicd/golden/datasets/: README.md
datasets/cicd/golden/datasets/cicd/golden/: case_004_expected.json  case_005_expected.json  case_006_expected.json
frontend/: Dockerfile  README.md  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: EvalsPage.tsx  PromptVersionsPage.tsx  PromptsPage.tsx
